<resources>
    <string name="app_name">Dictionary</string>
    <string name="version">Version 1.0.0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="popup_show_rest">展开...</string>
    <string name="popup_web_translation">网络释义...</string>

    <string name="label_us_phonetic">美:</string>
    <string name="label_uk_phonetic">英:</string>

    <string name="et_search_hint">请输入您要查询的单词或短语</string>

    <string name="tv_more">更多</string>
    <string name="action_add">新建单词本</string>

    <string name="author_name">github.com/lwenkun</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="dialog_input_hint">给新单词本起个名字吧！</string>
</resources>
