<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="2dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_star"
                android:layout_width="@dimen/star_size"
                android:layout_height="@dimen/star_size"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_star_rate_purple_900_24dp" />

            <TextView
                android:id="@+id/tv_query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/query_paddingEnd"
                android:textSize="@dimen/query_text_size"
                tools:text="Good" />

            <LinearLayout
                android:id="@+id/phonetics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_us_phonetic"
                    android:textSize="@dimen/label_text_size" />

                <TextView
                    android:id="@+id/tv_us_phonetic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/phonetic_paddingEnd"
                    android:textSize="@dimen/phonetic_text_size"
                    tools:text="gud" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_uk_phonetic"
                    android:textSize="@dimen/label_text_size" />

                <TextView
                    android:id="@+id/tv_uk_phonetic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/phonetic_text_size"
                    tools:text="gud" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_translation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:paddingStart="@dimen/tv_translation_paddingStart"
            android:paddingTop="@dimen/translation_paddingTop"
            android:textSize="@dimen/translation_text_size"
            tools:text="好" />

        <ListView
            android:id="@+id/lv_explains"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_translation" />


        <TextView
            android:id="@+id/tv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/lv_explains"
            android:clickable="true"
            android:padding="@dimen/tv_more_padding"
            android:text="@string/tv_more"
            android:textSize="@dimen/tv_more_text_size" />
    </RelativeLayout>
</android.support.v7.widget.CardView>